tests/suite/snapshots/suite__check__tests__check__bad-scope1.xi.snap
---
source: tests/suite/check.rs
assertion_line: 35
expression: Snapshot(context)
---
Error: Semantic error
   ╭─[tests/check/bad-scope1.xi:6:9]
   │
 6 │     x = y
   ·         ┬  
   ·         ╰── Unbound variable y
───╯

